--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Beginner ReactJS project learning by coding.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development",
-    "build": "webpack --mode production"
+    "start": "webpack-dev-server --env=development",
+    "build": "webpack --env=production"
   },
   "author": "Mohamad Ilham Ramadhan",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
+    "autoprefixer": "^8.4.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
@@ -21,12 +22,14 @@
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
+    "postcss-loader": "^2.1.4",
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-dev-server": "^3.1.3",
+    "webpack-merge": "^4.1.2"
   }
 }
